--- a/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/misc.yml
@@ -125,7 +125,19 @@
         - id: Soap
           prob: 0.10
         - id: PlushieCarp
-          prob: 0.1
+          prob: 0.2
+          orGroup: carp
+        - id: ClothingHeadHatGnome
+          prob: 0.2
+        - id: PlushieHolocarp
+          prob: 0.05
+          orGroup: carp
+        - id: PlushieMagicarp
+          prob: 0.05
+          orGroup: carp
+        - id: PlushieRainbowCarp
+          prob: 0.03
+          orGroup: carp
         - id: PlushieSlime
           prob: 0.1
         - id: PlushieSnake
