HAT NOW GIVES THE GNOME ACCENT TOO

--- a/Resources/Prototypes/Entities/Clothing/Head/hats.yml
+++ b/Resources/Prototypes/Entities/Clothing/Head/hats.yml
@@ -1121,4 +1121,6 @@
     sprite: Clothing/Head/Hats/hat_gnome.rsi
   - type: Seed
     seedId: gnome
+  - type: AddAccentClothing
+    accent: GnomeAccent
 
