make holoparasites actually holographic (#26862)
it's over

(cherry picked from commit c6ef37cc5f717116a59f465daa119d023a15c262)

--- a/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
@@ -68,7 +68,7 @@
           mask:
             - FlyingMobMask
           layer:
-            - FlyingMobLayer
+            - Opaque
     - type: Damageable
       damageContainer: Biological
     - type: MobState
@@ -88,6 +88,8 @@
       animation: WeaponArcFist
       attackRate: 1.8
       autoAttack: true
+      soundHit:
+        collection: Punch
       damage:
         types:
           Blunt: 20
@@ -236,6 +238,8 @@
       angle: 30
       animation: WeaponArcFist
       attackRate: 1.8
+      soundHit:
+        collection: BikeHorn
       damage:
         types:
           Blunt: 5
