Fixed cybersun pen attacking noise (#26951)
* Uupdated the cyberpen

* Updated noise

* Removed flashlight

(cherry picked from commit 0a29508f431e2f08213ca3d2554dc21a80c15061)

--- a/Resources/Prototypes/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/paper.yml
@@ -372,6 +372,8 @@
     damage:
       types:
         Piercing: 15
+    soundHit:
+      path: /Audio/Weapons/bladeslice.ogg
   - type: Tool
     qualities:
       - Screwing
