Add winter coats and shoes to loadouts (#27022)
* inital

* Update loadout-groups.ftl

* fix order

* add winter boots

* fix test fails

(cherry picked from commit 34fa48bff9b9af20843152debd40f4a1b0226d3a)

--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/salvage_specialist.yml
@@ -25,3 +25,23 @@
   id: SalvageSpecialistDuffel
   equipment:
     back: ClothingBackpackDuffelSalvageFilled
+
+# OuterClothing
+- type: itemLoadout
+  id: SalvageSpecialistWintercoat
+  equipment: SalvageSpecialistWintercoat
+
+- type: startingGear
+  id: SalvageSpecialistWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterMiner
+
+# Shoes
+- type: itemLoadout
+  id: SalvageBoots
+  equipment: SalvageBoots
+
+- type: startingGear
+  id: SalvageBoots
+  equipment:
+    shoes: ClothingShoesBootsSalvage
