--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/bartender.yml
@@ -63,3 +63,12 @@
   id: BartenderVest
   equipment:
     outerClothing: ClothingOuterVest
+
+- type: itemLoadout
+  id: BartenderWintercoat
+  equipment: BartenderWintercoat
+
+- type: startingGear
+  id: BartenderWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterBar
