--- a/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Medical/chief_medical_officer.yml
@@ -83,3 +83,12 @@
   id: ChiefMedicalOfficerLabCoat
   equipment:
     outerClothing: ClothingOuterCoatLabCmo
+
+- type: itemLoadout
+  id: ChiefMedicalOfficerWintercoat
+  equipment: ChiefMedicalOfficerWintercoat
+
+- type: startingGear
+  id: ChiefMedicalOfficerWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterCMO
