--- a/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Cargo/quartermaster.yml
@@ -109,3 +109,13 @@
   id: QuartermasterDuffel
   equipment:
     back: ClothingBackpackDuffelQuartermasterFilled
+
+# OuterClothing
+- type: itemLoadout
+  id: QuartermasterWintercoat
+  equipment: QuartermasterWintercoat
+
+- type: startingGear
+  id: QuartermasterWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterQM
