--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/chef.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/chef.yml
@@ -55,3 +55,12 @@
   id: ChefJacket
   equipment:
     outerClothing: ClothingOuterJacketChef
+
+- type: itemLoadout
+  id: ChefWintercoat
+  equipment: ChefWintercoat
+
+- type: startingGear
+  id: ChefWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterChef
