--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/janitor.yml
@@ -26,3 +26,13 @@
   id: JanitorJumpskirt
   equipment:
     jumpsuit: ClothingUniformJumpskirtJanitor
+
+# Outer clothing
+- type: itemLoadout
+  id: JanitorWintercoat
+  equipment: JanitorWintercoat
+
+- type: startingGear
+  id: JanitorWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterJani
