--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/mime.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/mime.yml
@@ -100,3 +100,13 @@
   id: MimeDuffel
   equipment:
     back: ClothingBackpackDuffelMimeFilled
+
+# Outerclothing
+- type: itemLoadout
+  id: MimeWintercoat
+  equipment: MimeWintercoat
+
+- type: startingGear
+  id: MimeWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterMime
