--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/passenger.yml
@@ -80,3 +80,32 @@
   id: FingerlessInsulatedGloves
   equipment:
     gloves: ClothingHandsGlovesFingerlessInsulated
+
+# Outerclothing
+- type: itemLoadout
+  id: PassengerWintercoat
+  equipment: PassengerWintercoat
+
+- type: startingGear
+  id: PassengerWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterCoat
+
+# Shoes
+- type: itemLoadout
+  id: BlackShoes
+  equipment: BlackShoes
+
+- type: startingGear
+  id: BlackShoes
+  equipment:
+    shoes: ClothingShoesColorBlack
+
+- type: itemLoadout
+  id: WinterBoots
+  equipment: WinterBoots
+
+- type: startingGear
+  id: WinterBoots
+  equipment:
+    shoes: ClothingShoesBootsWinter
