--- a/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Command/captain.yml
@@ -109,3 +109,22 @@
   id: CaptainDuffel
   equipment:
     back: ClothingBackpackDuffelCaptainFilled
+
+# Outer clothing
+- type: itemLoadout
+  id: CaptainOuterClothing
+  equipment: CaptainOuterClothing
+
+- type: startingGear
+  id: CaptainOuterClothing
+  equipment:
+    outerClothing: ClothingOuterArmorCaptainCarapace
+
+- type: itemLoadout
+  id: CaptainWintercoat
+  equipment: CaptainWintercoat
+
+- type: startingGear
+  id: CaptainWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterCap
