--- a/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/research_director.yml
@@ -80,3 +80,12 @@
   id: ResearchDirectorLabCoat
   equipment:
     outerClothing: ClothingOuterCoatRD
+
+- type: itemLoadout
+  id: ResearchDirectorWintercoat
+  equipment: ResearchDirectorWintercoat
+
+- type: startingGear
+  id: ResearchDirectorWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterRD
