--- a/Resources/Prototypes/Loadouts/Jobs/Science/scientist.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Science/scientist.yml
@@ -124,6 +124,15 @@
     outerClothing: ClothingOuterCoatRnd
 
 - type: itemLoadout
+  id: ScienceWintercoat
+  equipment: ScienceWintercoat
+
+- type: startingGear
+  id: ScienceWintercoat
+  equipment:
+    outerClothing: ClothingOuterWinterSci
+
+- type: itemLoadout
   id: SeniorResearcherLabCoat
   equipment: SeniorResearcherLabCoat
   effects:
@@ -134,6 +143,16 @@
   id: SeniorResearcherLabCoat
   equipment:
     outerClothing: ClothingOuterCoatLabSeniorResearcher
+
+# Shoes
+- type: itemLoadout
+  id: ScienceWinterBoots
+  equipment: ScienceWinterBoots
+
+- type: startingGear
+  id: ScienceWinterBoots
+  equipment:
+    shoes: ClothingShoesBootsWinterSci
 
 # ID
 - type: itemLoadout
