Add Nun Hood to Chaplain loadout options (#27025)
Adds Nun Hood to starting Chaplain loadout options

(cherry picked from commit 7114b1939c82acb593dad32f8bf34d557b8e722e)

--- a/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Civilian/chaplain.yml
@@ -9,6 +9,15 @@
     head: ClothingHeadHatFez
 
 - type: itemLoadout
+  id: ChaplainNunHood
+  equipment: ChaplainNunHood
+
+- type: startingGear
+  id: ChaplainNunHood
+  equipment:
+    head: ClothingHeadHatHoodNunHood
+
+- type: itemLoadout
   id: ChaplainPlagueHat
   equipment: ChaplainPlagueHat
 
