--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_fun.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_fun.yml
@@ -160,6 +160,9 @@
   - type: RandomFillSolution
     solution: drink
     weightedRandomId: RandomFillMopwata
+  - type: PressurizedSolution
+    solution: drink
+  - type: Shakeable
   - type: Appearance
   - type: GenericVisualizer
     visuals:
