Add Hardhats to Station Engineer Loadouts (#27044)
* Add hardhats to loadout.

* Update Resources/Prototypes/Loadouts/Jobs/Engineering/station_engineer.yml

* Update Resources/Prototypes/Loadouts/loadout_groups.yml

---------

Co-authored-by: metalgearsloth <31366439+metalgearsloth@users.noreply.github.com>

(cherry picked from commit 3c1ec9ac3435600f547c30d77512744b003a1f27)

--- a/Resources/Prototypes/Loadouts/Jobs/Engineering/station_engineer.yml
+++ b/Resources/Prototypes/Loadouts/Jobs/Engineering/station_engineer.yml
@@ -20,13 +20,31 @@
 
 # Head
 - type: itemLoadout
-  id: StationEngineerHead
-  equipment: StationEngineerHead
+  id: StationEngineerHardhatYellow
+  equipment: StationEngineerHardhatYellow
 
 - type: startingGear
-  id: StationEngineerHead
+  id: StationEngineerHardhatYellow
   equipment:
     head: ClothingHeadHatHardhatYellow
+
+- type: itemLoadout
+  id: StationEngineerHardhatOrange
+  equipment: StationEngineerHardhatOrange
+
+- type: startingGear
+  id: StationEngineerHardhatOrange
+  equipment:
+    head: ClothingHeadHatHardhatOrange
+
+- type: itemLoadout
+  id: StationEngineerHardhatRed
+  equipment: StationEngineerHardhatRed
+
+- type: startingGear
+  id: StationEngineerHardhatRed
+  equipment:
+    head: ClothingHeadHatHardhatRed
 
 - type: itemLoadout
   id: SeniorEngineerBeret
