--- a/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
+++ b/Resources/Prototypes/Entities/Clothing/Eyes/hud.yml
@@ -1,4 +1,14 @@
 - type: entity
+  id: ShowSecurityIcons
+  abstract: true
+  noSpawn: true
+  components:
+  - type: ShowJobIcons
+  - type: ShowMindShieldIcons
+  - type: ShowCriminalRecordIcons
+
+
+- type: entity
   parent: ClothingEyesBase
   id: ClothingEyesHudDiagnostic
   name: diagnostic hud
@@ -34,7 +44,7 @@
     - HudMedical
 
 - type: entity
-  parent: [ClothingEyesBase, SecHud]
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudSecurity
   name: security hud
   description: A heads-up display that scans the humanoids in view and provides accurate data about their ID status and security records.
@@ -43,7 +53,6 @@
     sprite: Clothing/Eyes/Hud/sec.rsi
   - type: Clothing
     sprite: Clothing/Eyes/Hud/sec.rsi
-  - type: ShowSecurityIcons
   - type: Tag
     tags:
     - HudSecurity
@@ -138,7 +147,7 @@
   - type: ShowThirstIcons
 
 - type: entity
-  parent: [ClothingEyesBase, SecHud]
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudMedSec
   name: medsec hud
   description: An eye display that looks like a mixture of medical and security huds.
@@ -150,7 +159,6 @@
   - type: Construction
     graph: HudMedSec
     node: medsecHud
-  - type: ShowSecurityIcons
   - type: ShowHealthBars
     damageContainers:
     - Biological
@@ -159,7 +167,7 @@
     - Biological
 
 - type: entity
-  parent: [ClothingEyesBase, SecHud]
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudMultiversal
   name: multiversal hud
   description: Filler
@@ -168,7 +176,6 @@
     sprite: Clothing/Eyes/Hud/medsecengi.rsi
   - type: Clothing
     sprite: Clothing/Eyes/Hud/medsecengi.rsi
-  - type: ShowSecurityIcons
   - type: ShowHealthBars
     damageContainers:
     - Biological
@@ -179,7 +186,7 @@
   - type: ShowSyndicateIcons
 
 - type: entity
-  parent: [ClothingEyesBase, SecHud]
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudOmni
   name: omni hud
   description: Filler
@@ -188,7 +195,6 @@
     sprite: Clothing/Eyes/Hud/omni.rsi
   - type: Clothing
     sprite: Clothing/Eyes/Hud/omni.rsi
-  - type: ShowSecurityIcons
   - type: ShowHealthBars
     damageContainers:
     - Biological
@@ -201,7 +207,7 @@
   - type: ShowSyndicateIcons
 
 - type: entity
-  parent: ClothingEyesBase
+  parent: [ClothingEyesBase, ShowSecurityIcons]
   id: ClothingEyesHudSyndicate
   name: syndicate visor
   description: The syndicate's professional head-up display, designed for better detection of humanoids and their subsequent elimination.
@@ -211,7 +217,6 @@
   - type: Clothing
     sprite: Clothing/Eyes/Hud/synd.rsi
   - type: ShowSyndicateIcons
-  - type: ShowSecurityIcons
 
 - type: entity
   parent: ClothingEyesBase
@@ -230,11 +235,9 @@
     - Biological
 
 - type: entity
-  parent: ClothingEyesGlassesSunglasses
+  parent: [ClothingEyesGlassesSunglasses, ShowSecurityIcons]
   id: ClothingEyesGlassesHiddenSecurity
   suffix: Syndicate
-  components:
-  - type: ShowSecurityIcons
 
 - type: entity
   parent: ClothingEyesHudMedical
