Add recipe of beverage jug (#25681)
* Add craft of beverage jug

* Change steel to plastic

* Fix price

(cherry picked from commit 94aa61b32342eb616d2bf21839f84dc5ffaecbea)

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -124,6 +124,7 @@
       - DrinkGlass
       - DrinkShotGlass
       - DrinkGlassCoupeShaped
+      - CustomDrinkJug
       - FoodPlate
       - FoodPlateSmall
       - FoodPlatePlastic
