--- a/Resources/Maps/atlas.yml
+++ b/Resources/Maps/atlas.yml
@@ -18009,6 +18009,23 @@ entities:
     - type: Transform
       pos: -37.5,-16.5
       parent: 30
+- proto: ClosetEmergencyN2FilledRandom
+  entities:
+  - uid: 7575
+    components:
+    - type: Transform
+      pos: -42.5,-8.5
+      parent: 30
+  - uid: 7607
+    components:
+    - type: Transform
+      pos: 15.5,-16.5
+      parent: 30
+  - uid: 7961
+    components:
+    - type: Transform
+      pos: -7.5,20.5
+      parent: 30
 - proto: ClosetFireFilled
   entities:
   - uid: 704
@@ -18150,6 +18167,17 @@ entities:
     components:
     - type: Transform
       pos: 24.5,22.5
+      parent: 30
+  - uid: 7610
+    components:
+    - type: Transform
+      rot: -1.5707963267948966 rad
+      pos: 16.5,-14.5
+      parent: 30
+  - uid: 7960
+    components:
+    - type: Transform
+      pos: 22.5,-18.5
       parent: 30
 - proto: ClosetWallFireFilledRandom
   entities:
@@ -18327,15 +18355,6 @@ entities:
     components:
     - type: Transform
       pos: 23.484406,-12.215485
-      parent: 30
-    - type: Physics
-      canCollide: False
-- proto: ClothingHeadHatHairflower
-  entities:
-  - uid: 289
-    components:
-    - type: Transform
-      pos: 27.123781,8.439485
       parent: 30
     - type: Physics
       canCollide: False
@@ -23431,6 +23450,15 @@ entities:
     - type: Transform
       pos: -9.677708,-14.257307
       parent: 30
+- proto: FoodPoppy
+  entities:
+  - uid: 289
+    components:
+    - type: Transform
+      pos: 27.123781,8.439485
+      parent: 30
+    - type: Physics
+      canCollide: False
 - proto: FoodRiceBoiled
   entities:
   - uid: 5251
@@ -35929,6 +35957,13 @@ entities:
     - type: Transform
       pos: -32.578957,21.567701
       parent: 30
+- proto: Jukebox
+  entities:
+  - uid: 7408
+    components:
+    - type: Transform
+      pos: -21.5,7.5
+      parent: 30
 - proto: KitchenElectricGrill
   entities:
   - uid: 6520
@@ -39201,6 +39236,11 @@ entities:
       parent: 30
     - type: ApcPowerReceiver
       powerLoad: 0
+  - uid: 7476
+    components:
+    - type: Transform
+      pos: -40.5,13.5
+      parent: 30
   - uid: 7512
     components:
     - type: Transform
@@ -45366,8 +45406,6 @@ entities:
     - type: Transform
       pos: -19.5,4.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineAtmosDrobe
   entities:
   - uid: 6485
@@ -45375,8 +45413,6 @@ entities:
     - type: Transform
       pos: -33.5,6.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineBooze
   entities:
   - uid: 33
@@ -45384,22 +45420,16 @@ entities:
     - type: Transform
       pos: -43.5,-5.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 295
     components:
     - type: Transform
       pos: 30.5,10.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 5530
     components:
     - type: Transform
       pos: -18.5,4.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCart
   entities:
   - uid: 498
@@ -45414,15 +45444,11 @@ entities:
     - type: Transform
       pos: -29.5,-13.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 5211
     components:
     - type: Transform
       pos: 17.5,15.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChapel
   entities:
   - uid: 994
@@ -45437,8 +45463,6 @@ entities:
     - type: Transform
       pos: -14.5,3.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChefvend
   entities:
   - uid: 292
@@ -45446,8 +45470,6 @@ entities:
     - type: Transform
       pos: -13.5,7.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChemDrobe
   entities:
   - uid: 3711
@@ -45455,8 +45477,6 @@ entities:
     - type: Transform
       pos: 2.5,-9.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChemicals
   entities:
   - uid: 576
@@ -45473,8 +45493,6 @@ entities:
     - type: Transform
       pos: -30.5,-3.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineClothing
   entities:
   - uid: 3332
@@ -45482,8 +45500,6 @@ entities:
     - type: Transform
       pos: 23.5,-11.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCoffee
   entities:
   - uid: 581
@@ -45493,8 +45509,6 @@ entities:
     - type: Transform
       pos: 25.5,-6.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 1534
     components:
     - type: MetaData
@@ -45502,15 +45516,11 @@ entities:
     - type: Transform
       pos: 17.5,16.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 2728
     components:
     - type: Transform
       pos: -25.5,-9.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 3349
     components:
     - type: MetaData
@@ -45518,8 +45528,6 @@ entities:
     - type: Transform
       pos: 15.5,-0.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 4240
     components:
     - type: MetaData
@@ -45527,8 +45535,6 @@ entities:
     - type: Transform
       pos: -6.5,-6.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCuraDrobe
   entities:
   - uid: 6439
@@ -45536,8 +45542,6 @@ entities:
     - type: Transform
       pos: -10.5,-11.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineDetDrobe
   entities:
   - uid: 1274
@@ -45545,8 +45549,6 @@ entities:
     - type: Transform
       pos: 2.5,26.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineDinnerware
   entities:
   - uid: 4722
@@ -45554,8 +45556,6 @@ entities:
     - type: Transform
       pos: -16.5,3.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineDiscount
   entities:
   - uid: 7143
@@ -45563,8 +45563,6 @@ entities:
     - type: Transform
       pos: -30.5,-5.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineEngiDrobe
   entities:
   - uid: 5907
@@ -45572,8 +45570,6 @@ entities:
     - type: Transform
       pos: -31.5,6.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineEngivend
   entities:
   - uid: 7160
@@ -45588,8 +45584,6 @@ entities:
     - type: Transform
       pos: -5.5,-6.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineHydrobe
   entities:
   - uid: 1940
@@ -45597,8 +45591,6 @@ entities:
     - type: Transform
       pos: -9.5,6.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineJaniDrobe
   entities:
   - uid: 3290
@@ -45606,8 +45598,6 @@ entities:
     - type: Transform
       pos: 21.5,-0.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineLawDrobe
   entities:
   - uid: 873
@@ -45615,8 +45605,6 @@ entities:
     - type: Transform
       pos: 3.5,5.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineMedical
   entities:
   - uid: 2468
@@ -45624,8 +45612,6 @@ entities:
     - type: Transform
       pos: 4.5,-0.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineMediDrobe
   entities:
   - uid: 2749
@@ -45633,8 +45619,6 @@ entities:
     - type: Transform
       pos: 9.5,-10.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineNutri
   entities:
   - uid: 2410
@@ -45642,8 +45626,6 @@ entities:
     - type: Transform
       pos: -9.5,-1.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineRoboDrobe
   entities:
   - uid: 5101
@@ -45651,8 +45633,6 @@ entities:
     - type: Transform
       pos: -20.5,-12.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineRobotics
   entities:
   - uid: 4872
@@ -45660,8 +45640,6 @@ entities:
     - type: Transform
       pos: -27.5,-14.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSalvage
   entities:
   - uid: 5439
@@ -45676,8 +45654,6 @@ entities:
     - type: Transform
       pos: -19.5,-12.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSec
   entities:
   - uid: 4057
@@ -45685,15 +45661,11 @@ entities:
     - type: Transform
       pos: 15.5,15.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 7028
     components:
     - type: Transform
       pos: 10.5,10.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSecDrobe
   entities:
   - uid: 4058
@@ -45701,8 +45673,6 @@ entities:
     - type: Transform
       pos: 15.5,16.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSeeds
   entities:
   - uid: 2362
@@ -45710,8 +45680,6 @@ entities:
     - type: Transform
       pos: -10.5,-1.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSnack
   entities:
   - uid: 2958
@@ -45719,8 +45687,6 @@ entities:
     - type: Transform
       pos: 20.5,-14.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineTankDispenserEngineering
   entities:
   - uid: 7205
@@ -45754,15 +45720,11 @@ entities:
     - type: Transform
       pos: -7.5,16.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 4144
     components:
     - type: Transform
       pos: -11.5,-13.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineVendomat
   entities:
   - uid: 5434
@@ -45770,15 +45732,11 @@ entities:
     - type: Transform
       pos: -9.5,14.5
       parent: 30
-    - type: Advertise
-      enabled: False
   - uid: 7530
     components:
     - type: Transform
       pos: -31.5,3.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineViroDrobe
   entities:
   - uid: 656
@@ -45786,8 +45744,6 @@ entities:
     - type: Transform
       pos: 0.5,-21.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineWinter
   entities:
   - uid: 3333
@@ -45795,8 +45751,6 @@ entities:
     - type: Transform
       pos: 23.5,-10.5
       parent: 30
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineYouTool
   entities:
   - uid: 1661
