--- a/Resources/Maps/saltern.yml
+++ b/Resources/Maps/saltern.yml
@@ -3268,6 +3268,7 @@ entities:
     - type: GridPathfinding
     - type: GasTileOverlay
     - type: RadiationGridResistance
+    - type: NavMap
   - uid: 658
     components:
     - type: MetaData
@@ -6485,8 +6486,6 @@ entities:
       rot: 1.5707963267948966 rad
       pos: -19.5,10.5
       parent: 31
-    - type: Advertise
-      enabled: False
     - type: SpamEmitSound
       enabled: False
 - proto: Bloodpack
@@ -26338,6 +26337,28 @@ entities:
     - type: Transform
       pos: -53.5,-9.5
       parent: 31
+- proto: ClosetEmergencyN2FilledRandom
+  entities:
+  - uid: 11448
+    components:
+    - type: Transform
+      pos: 15.5,-23.5
+      parent: 31
+  - uid: 11449
+    components:
+    - type: Transform
+      pos: 42.5,-13.5
+      parent: 31
+  - uid: 11450
+    components:
+    - type: Transform
+      pos: -20.5,12.5
+      parent: 31
+  - uid: 11451
+    components:
+    - type: Transform
+      pos: -27.5,-17.5
+      parent: 31
 - proto: ClosetFireFilled
   entities:
   - uid: 221
@@ -26874,24 +26895,12 @@ entities:
     - type: Physics
       canCollide: False
     - type: InsideEntityStorage
-- proto: ClothingHeadHatFlowerCrown
+- proto: ClothingHeadHatFlowerWreath
   entities:
   - uid: 3235
     components:
     - type: Transform
       pos: 49.449142,-25.427004
-      parent: 31
-- proto: ClothingHeadHatHairflower
-  entities:
-  - uid: 4196
-    components:
-    - type: Transform
-      pos: -3.75686,18.190365
-      parent: 31
-  - uid: 9762
-    components:
-    - type: Transform
-      pos: -16.049828,-39.578854
       parent: 31
 - proto: ClothingHeadHatHardhatOrange
   entities:
@@ -32834,7 +32843,7 @@ entities:
       pos: 38.5,-5.5
       parent: 31
     - type: Door
-      secondsUntilStateChange: -9882.14
+      secondsUntilStateChange: -9978.97
       state: Closing
   - uid: 4019
     components:
@@ -33097,6 +33106,9 @@ entities:
     - type: Transform
       pos: 1.5,-2.5
       parent: 31
+    - type: Door
+      secondsUntilStateChange: -80.957985
+      state: Closing
   - uid: 3944
     components:
     - type: Transform
@@ -33981,6 +33993,18 @@ entities:
     components:
     - type: Transform
       pos: -35.517406,-25.152033
+      parent: 31
+- proto: FoodPoppy
+  entities:
+  - uid: 4196
+    components:
+    - type: Transform
+      pos: -3.75686,18.190365
+      parent: 31
+  - uid: 9762
+    components:
+    - type: Transform
+      pos: -16.049828,-39.578854
       parent: 31
 - proto: FoodShakerSalt
   entities:
@@ -48578,6 +48602,13 @@ entities:
     - type: Transform
       pos: -11.571391,18.68531
       parent: 31
+- proto: Jukebox
+  entities:
+  - uid: 5090
+    components:
+    - type: Transform
+      pos: -2.5,1.5
+      parent: 31
 - proto: KalimbaInstrument
   entities:
   - uid: 10631
@@ -60987,8 +61018,6 @@ entities:
     - type: Transform
       pos: -12.5,-6.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineAtmosDrobe
   entities:
   - uid: 6557
@@ -60996,8 +61025,6 @@ entities:
     - type: Transform
       pos: 53.5,15.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineBooze
   entities:
   - uid: 970
@@ -61005,8 +61032,6 @@ entities:
     - type: Transform
       pos: -6.5,-6.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCargoDrobe
   entities:
   - uid: 7130
@@ -61014,8 +61039,6 @@ entities:
     - type: Transform
       pos: 12.5,12.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCart
   entities:
   - uid: 153
@@ -61030,15 +61053,11 @@ entities:
     - type: Transform
       pos: -34.5,10.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 9145
     components:
     - type: Transform
       pos: 5.5,-17.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChapel
   entities:
   - uid: 4887
@@ -61053,8 +61072,6 @@ entities:
     - type: Transform
       pos: -13.5,-3.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChefvend
   entities:
   - uid: 911
@@ -61062,8 +61079,6 @@ entities:
     - type: Transform
       pos: -9.5,-3.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChemDrobe
   entities:
   - uid: 578
@@ -61071,8 +61086,6 @@ entities:
     - type: Transform
       pos: 17.5,1.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineChemicals
   entities:
   - uid: 1099
@@ -61089,22 +61102,11 @@ entities:
     - type: Transform
       pos: 14.5,21.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 2877
     components:
     - type: Transform
       pos: 0.5,-22.5
       parent: 31
-    - type: Advertise
-      enabled: False
-  - uid: 5090
-    components:
-    - type: Transform
-      pos: -2.5,1.5
-      parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 8705
     components:
     - type: MetaData
@@ -61112,8 +61114,11 @@ entities:
     - type: Transform
       pos: -32.5,-29.5
       parent: 31
-    - type: Advertise
-      enabled: False
+  - uid: 11446
+    components:
+    - type: Transform
+      pos: 1.5,-13.5
+      parent: 31
 - proto: VendingMachineClothing
   entities:
   - uid: 7647
@@ -61121,8 +61126,6 @@ entities:
     - type: Transform
       pos: -29.5,-7.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCoffee
   entities:
   - uid: 983
@@ -61132,8 +61135,6 @@ entities:
     - type: Transform
       pos: 0.5,23.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 2362
     components:
     - type: MetaData
@@ -61141,8 +61142,6 @@ entities:
     - type: Transform
       pos: 5.5,-13.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 8738
     components:
     - type: MetaData
@@ -61150,8 +61149,6 @@ entities:
     - type: Transform
       pos: -36.5,-23.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 9039
     components:
     - type: MetaData
@@ -61159,8 +61156,6 @@ entities:
     - type: Transform
       pos: 35.5,6.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 9328
     components:
     - type: MetaData
@@ -61168,8 +61163,6 @@ entities:
     - type: Transform
       pos: -38.5,-5.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineCola
   entities:
   - uid: 984
@@ -61177,22 +61170,16 @@ entities:
     - type: Transform
       pos: 1.5,21.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 1229
     components:
     - type: Transform
       pos: -34.5,2.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 7958
     components:
     - type: Transform
       pos: 25.5,6.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineDetDrobe
   entities:
   - uid: 5653
@@ -61200,8 +61187,6 @@ entities:
     - type: Transform
       pos: -16.5,-37.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineDinnerware
   entities:
   - uid: 990
@@ -61211,8 +61196,6 @@ entities:
     - type: Transform
       pos: -13.5,1.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineEngiDrobe
   entities:
   - uid: 3283
@@ -61220,8 +61203,6 @@ entities:
     - type: Transform
       pos: 35.5,0.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineEngivend
   entities:
   - uid: 1256
@@ -61236,8 +61217,6 @@ entities:
     - type: Transform
       pos: 5.5,-16.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineGeneDrobe
   entities:
   - uid: 7343
@@ -61245,8 +61224,6 @@ entities:
     - type: Transform
       pos: 8.5,-13.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineHappyHonk
   entities:
   - uid: 4174
@@ -61254,8 +61231,6 @@ entities:
     - type: Transform
       pos: -9.5,-4.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineHydrobe
   entities:
   - uid: 4126
@@ -61263,8 +61238,6 @@ entities:
     - type: Transform
       pos: -14.5,-6.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineJaniDrobe
   entities:
   - uid: 2007
@@ -61272,8 +61245,6 @@ entities:
     - type: Transform
       pos: -19.5,-10.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineMedical
   entities:
   - uid: 1148
@@ -61281,15 +61252,11 @@ entities:
     - type: Transform
       pos: 14.5,-11.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 7277
     components:
     - type: Transform
       pos: 12.5,-7.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineMediDrobe
   entities:
   - uid: 1143
@@ -61297,8 +61264,6 @@ entities:
     - type: Transform
       pos: 24.5,-4.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineNutri
   entities:
   - uid: 7436
@@ -61306,8 +61271,6 @@ entities:
     - type: Transform
       pos: -15.5,-8.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineRestockBooze
   entities:
   - uid: 10691
@@ -61322,8 +61285,6 @@ entities:
     - type: Transform
       pos: -3.5,-25.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineRobotics
   entities:
   - uid: 9607
@@ -61331,8 +61292,6 @@ entities:
     - type: Transform
       pos: 0.5,-24.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSalvage
   entities:
   - uid: 6858
@@ -61347,8 +61306,6 @@ entities:
     - type: Transform
       pos: -8.5,-23.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSec
   entities:
   - uid: 7834
@@ -61356,8 +61313,6 @@ entities:
     - type: Transform
       pos: -15.5,13.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSecDrobe
   entities:
   - uid: 474
@@ -61365,8 +61320,6 @@ entities:
     - type: Transform
       pos: -9.5,17.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSeeds
   entities:
   - uid: 4127
@@ -61374,8 +61327,6 @@ entities:
     - type: Transform
       pos: -17.5,-2.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSeedsUnlocked
   entities:
   - uid: 5632
@@ -61383,8 +61334,6 @@ entities:
     - type: Transform
       pos: -19.5,9.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSnack
   entities:
   - uid: 133
@@ -61392,15 +61341,11 @@ entities:
     - type: Transform
       pos: -22.5,0.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 7959
     components:
     - type: Transform
       pos: 26.5,6.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSovietSoda
   entities:
   - uid: 7561
@@ -61408,15 +61353,11 @@ entities:
     - type: Transform
       pos: -11.5,-9.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 9574
     components:
     - type: Transform
       pos: 19.5,-24.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineSustenance
   entities:
   - uid: 7377
@@ -61424,8 +61365,6 @@ entities:
     - type: Transform
       pos: -17.5,11.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineTankDispenserEngineering
   entities:
   - uid: 3946
@@ -61461,8 +61400,6 @@ entities:
     - type: Transform
       pos: -19.5,-4.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineVendomat
   entities:
   - uid: 1227
@@ -61470,15 +61407,11 @@ entities:
     - type: Transform
       pos: -27.5,11.5
       parent: 31
-    - type: Advertise
-      enabled: False
   - uid: 10323
     components:
     - type: Transform
       pos: -15.5,-14.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineViroDrobe
   entities:
   - uid: 2910
@@ -61486,8 +61419,6 @@ entities:
     - type: Transform
       pos: 23.5,-4.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineWinter
   entities:
   - uid: 8281
@@ -61495,8 +61426,6 @@ entities:
     - type: Transform
       pos: -30.5,-7.5
       parent: 31
-    - type: Advertise
-      enabled: False
 - proto: VendingMachineYouTool
   entities:
   - uid: 194
