--- a/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/silicon.yml
@@ -62,6 +62,7 @@
     group: GenericNumber
   - type: Repairable
     doAfterDelay: 8
+    fuelCost: 15
   - type: Pullable
   - type: Tag
     tags:
