--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/base_structureairlocks.yml
@@ -64,6 +64,7 @@
     containers:
       board: !type:Container
   - type: Weldable
+    fuel: 5
     time: 3
   - type: Airlock
   - type: NavMapDoor
@@ -156,7 +157,6 @@
   - type: PointLightAirlock
   placement:
     mode: SnapgridCenter
-
 
 - type: entity
   id: AirlockRCDResistant
