Wallmount substations can once again be created (#27138)
* Wallmount substation once again obtainable

* Fill mapped wallmount substations with components

(cherry picked from commit acb112b05439fc7e5d2c60b3c66ba19d38e0e066)

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -158,6 +158,7 @@
       - APCElectronics
       - SMESMachineCircuitboard
       - SubstationMachineCircuitboard
+      - WallmountSubstationElectronics
       - CellRechargerCircuitboard
       - BorgChargerCircuitboard
       - WeaponCapacitorRechargerCircuitboard
