--- a/Resources/Prototypes/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/Hydroponics/seeds.yml
@@ -1007,7 +1007,7 @@
   plantRsi: Objects/Specific/Hydroponics/chili.rsi
   packetPrototype: ChiliSeeds
   productPrototypes:
-    - FoodChili
+    - FoodChiliPepper
   mutationPrototypes:
     - chilly
   harvestRepeat: Repeat
@@ -1040,7 +1040,7 @@
   plantRsi: Objects/Specific/Hydroponics/chilly.rsi
   packetPrototype: ChillySeeds
   productPrototypes:
-    - FoodChilly
+    - FoodChillyPepper
   harvestRepeat: Repeat
   lifespan: 25
   maturation: 6
