--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -228,6 +228,13 @@ AirlockExternalGlassEasyPryLocked: AirlockExternalGlassLocked
 AirlockGlassShuttleEasyPryLocked: AirlockExternalGlassShuttleLocked
 AirlockShuttleEasyPryLocked: AirlockExternalShuttleLocked
 
+# 2024-03-10
+ClothingBackpackFilledDetective: ClothingBackpackSecurityFilledDetective
+ClothingBackpackDuffelFilledDetective: ClothingBackpackDuffelSecurityFilledDetective
+ClothingBackpackSatchelFilledDetective: ClothingBackpackSatchelSecurityFilledDetective
+FoodChili: FoodChiliPepper
+FoodChilly: FoodChillyPepper
+
 # 2024-03-11
 ImprovisedExplosive: FireBomb
 ImprovisedExplosiveEmpty: FireBombEmpty
