You can bless more containers with a bible (#26526)
* Made more things blessable

* Removed junk

* Remove whatever that was

* Make bowls blessable

* New mixablesolution component, converted everything to work with it

* Fix minor mishaps

* Fix extra spaces in bottle yml

* Fix last extra space, fix bottle havign the wrong solution name

* Remvoe unneeded event(I think), fix alcohol bottles not being mixable

* I missed cans

(cherry picked from commit 089c9cb96786b21d2602ca0dd71fb643d116d3fa)

--- a/Resources/Maps/atlas.yml
+++ b/Resources/Maps/atlas.yml
@@ -4543,7 +4543,6 @@ entities:
       solutions:
         beaker:
           temperature: 293.15
-          canMix: True
           canReact: True
           maxVol: 50
           name: null
@@ -4551,6 +4550,8 @@ entities:
           - data: null
             ReagentId: Leporazine
             Quantity: 50
+    - type: MixableSolution
+      solution: beaker
 - proto: Bed
   entities:
   - uid: 247
@@ -22176,7 +22177,6 @@ entities:
       solutions:
         drink:
           temperature: 293.15
-          canMix: False
           canReact: True
           maxVol: 30
           name: null
