--- a/Resources/Maps/saltern.yml
+++ b/Resources/Maps/saltern.yml
@@ -6113,7 +6113,6 @@ entities:
       solutions:
         beaker:
           temperature: 293.15
-          canMix: True
           canReact: True
           maxVol: 50
           name: null
@@ -6121,6 +6120,8 @@ entities:
           - data: null
             ReagentId: Leporazine
             Quantity: 40
+    - type: MixableSolution
+      solution: beaker
   - uid: 10800
     components:
     - type: Transform
