--- a/Resources/Prototypes/_White/Species/felinid.yml
+++ b/Resources/Prototypes/_White/Species/felinid.yml
@@ -10,7 +10,7 @@
   bodyTypes:
     - HumanNormal
   sponsorOnly: true
-  forAmins: true
+  forAdmins: true
 
 - type: markingPoints
   id: MobFelinidMarkingLimits
