- fix: Ling fixes.

--- a/Resources/Prototypes/Actions/changeling.yml
+++ b/Resources/Prototypes/Actions/changeling.yml
@@ -47,6 +47,7 @@
       icon: White/Actions/changeling.rsi/reviving_stasis.png
       event: !type:RegenerateActionEvent
       checkCanInteract: false
+      checkConsciousness: false
       useDelay: 1
 
 - type: entity
