нереальный рефактор E20System(не работает)

--- a/Resources/Prototypes/Entities/Objects/Fun/dice.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/dice.yml
@@ -142,6 +142,8 @@
   - type: E20
     sides: 20
     currentValue: 20
+    events:
+    - ExplosionEvent
   - type: Sprite
     sprite: Objects/Fun/dice.rsi
     state: d20_20
