Increase availibility of combat knives to security (#27224)
* Increase availibility of combat knives to security

* whitelisted combatknife in secbelt for Diona

* Revert SecDrobe change for MGS

(cherry picked from commit 88b56efba102c0f537c268f3b23e21715d5c34d6)

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/sec.yml
@@ -16,6 +16,7 @@
     RiotLaserShield: 2
     RiotBulletShield: 2
     SecurityWhistle: 5
+    CombatKnife: 3
     TearGasGrenade: 4
     ClusterBangFull: 2
 
