--- a/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
+++ b/Resources/Prototypes/Entities/Clothing/Belt/belts.yml
@@ -514,6 +514,7 @@
         - Sidearm
         - MagazinePistol
         - MagazineMagnum
+        - CombatKnife
       components:
         - Stunbaton
         - FlashOnTrigger
